--- a/projects/mona-ui/styles/mona-light.scss
+++ b/projects/mona-ui/styles/mona-light.scss
@@ -4,7 +4,7 @@
     --mona-background: #fdfdfd;
     --mona-background-light: #ffffff;
     --mona-border-color: #e0e0e0;
-    --mona-component-height: 27px;
+    --mona-input-height: 27px;
     --mona-primary: #00a86b;
     --mona-primary-dark: #009860;
     --mona-primary-light: #00b876;
