--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "~dist/mona-ui/styles/mona-dark";
+
 html, body {
     width: 100%;
     height: 100%;
-    background: #eee;
+    background: #323335;
+}
+
+
+.popup-noselect {
+    user-select: none;
 }
