--- a/projects/mona-ui/styles/mona-dark.scss
+++ b/projects/mona-ui/styles/mona-dark.scss
@@ -11,6 +11,7 @@
     --mona-primary: #7701FF;
     --mona-primary-dark: #6600EE;
     --mona-primary-light: #8812FF;
+    --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
     --mona-shadow-color: #101114;
     --mona-text: #CCCCCC;
 }
