Populate context menu with menu-item component

--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -4,4 +4,7 @@ div.wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
+    & > div {
+        margin: 5px;
+    }
 }
