--- a/projects/mona-ui/src/lib/buttons/modules/split-button/components/split-button/split-button.component.scss
+++ b/projects/mona-ui/src/lib/buttons/modules/split-button/components/split-button/split-button.component.scss
@@ -12,5 +12,13 @@ div.mona-split-button {
         &:first-child {
             border-right: 1px solid var(--mona-border-color);
         }
+        &:nth-child(2) {
+            & > span {
+                font-size: 18px;
+                display: inline-block;
+                transform-origin: center;
+                transform: rotate(90deg);
+            }
+        }
     }
 }
