--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
@@ -1,7 +1,15 @@
+:host {
+    width: 100%;
+}
+
 ul {
     width: 100%;
     list-style: none;
     & li {
         height: var(--mona-input-height);
+        &.divider {
+            height: auto;
+            pointer-events: none;
+        }
     }
 }
