--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="wrapper">
-    <button monaButton [disabled]="false" [primary]="false" [selected]="false" [toggleable]="false"
-            (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)" #testButtonRef>Test Button
-    </button>
 
-    <div style="margin-top: 10px;">
+    <div>
+        <button monaButton [disabled]="false" [primary]="false" [selected]="false" [toggleable]="false"
+                (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)" #testButtonRef>Test Button
+        </button>
+    </div>
+
+    <div>
         <mona-button-group selection="multiple">
             <button monaButton [toggleable]="true">B</button>
             <button monaButton [toggleable]="true" (click)="openPopup2($event)" #italicButtonRef>I</button>
@@ -31,7 +34,22 @@
         <button monaButton #contextMenuAnchor>
             <span style="color: lightcoral;">Context Menu Target</span>
         </button>
-        <mona-contextmenu [target]="contextMenuAnchor"></mona-contextmenu>
+        <mona-contextmenu [target]="contextMenuAnchor">
+            <mona-menu-item text="File"></mona-menu-item>
+            <mona-menu-item text="Edit" [disabled]="true">
+                <mona-menu-item text="Undo" (menuClick)="print('Undo clicked.')"></mona-menu-item>
+                <mona-menu-item text="Redo"></mona-menu-item>
+            </mona-menu-item>
+            <mona-menu-item text="View" (menuClick)="print('View clicked.')"></mona-menu-item>
+            <mona-menu-item [divider]="true"></mona-menu-item>
+            <mona-menu-item text="Search">
+                <mona-menu-item text="Find">
+                    <mona-menu-item text="Find Next" [disabled]="true"></mona-menu-item>
+                    <mona-menu-item text="Find Previous" [disabled]="false" (menuClick)="print('Find Previous clicked.')"></mona-menu-item>
+                </mona-menu-item>
+                <mona-menu-item text="Replace"></mona-menu-item>
+            </mona-menu-item>
+        </mona-contextmenu>
     </div>
 
 </div>
