--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.scss
@@ -3,5 +3,40 @@ div.mona-contextmenu-item {
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 10px;
+
+    &-icon {
+        padding: 0 0 0 4px;
+    }
+
+    &-text {
+        padding: 0 10px;
+        flex: 1;
+    }
+
+    &-link {
+        width: calc(var(--mona-input-height) / 2);
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > span {
+            font-size: 22px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: -2px;
+            margin-left: -5px;
+        }
+    }
+}
+
+span.divider {
+    display: block;
+    height: 1px;
+    width: 100%;
+    margin: 4px 0;
+    color: var(--mona-border-color);
+    border-top: 1px solid var(--mona-border-color);
 }
