--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -104,7 +104,7 @@ mona-button-group button[monaButton] {
 /** Context Menu */
 .mona-contextmenu-content {
     user-select: none;
-    padding: 0 !important;
+    padding: 4px 0 !important;
 }
 
 .mona-contextmenu-item {
