--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.html
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.html
@@ -3,7 +3,8 @@
         <li class="mona-contextmenu-list-item" [ngClass]="{'disabled': menuItem.disabled, 'divider': menuItem.divider}"
             (mouseenter)="onListItemMouseEnter($event, menuItem)" (mouseleave)="onListItemMouseLeave($event)"
             (click)="onListItemClick($event, menuItem)" *ngIf="menuItem.visible">
-            <mona-contextmenu-item [menuItem]="menuItem" [submenuPopupRef]="menuPopupRef" *ngIf="menuItem.visible"></mona-contextmenu-item>
+            <mona-contextmenu-item [menuItem]="menuItem" [iconSpaceVisible]="iconSpaceVisible" [linkSpaceVisible]="linkSpaceVisible"
+                                   [submenuPopupRef]="menuPopupRef" *ngIf="menuItem.visible"></mona-contextmenu-item>
         </li>
     </ng-container>
 </ul>
