Initial keyboard navigation for context menu

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -61,6 +61,7 @@
                 <mona-menu-item text="Find">
                     <mona-menu-item text="Find Next" [disabled]="true" iconClass="fa fa-arrow-right"></mona-menu-item>
                     <mona-menu-item text="Find Previous" [disabled]="false" iconClass="fa fa-arrow-left" (menuClick)="print('Find Previous clicked.')"></mona-menu-item>
+                    <mona-menu-item text="Find All"></mona-menu-item>
                 </mona-menu-item>
                 <mona-menu-item text="Replace"></mona-menu-item>
             </mona-menu-item>
