--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.scss
@@ -5,6 +5,7 @@
 ul {
     width: 100%;
     list-style: none;
+    outline: none;
     & li {
         height: var(--mona-input-height);
         &.divider {
