--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -118,6 +118,9 @@ mona-button-group button[monaButton] {
         @include disabled;
         background-color: inherit;
     }
+    &.focused {
+        background-color: var(--mona-background-dark);
+    }
 }
 
 
