--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -47,7 +47,7 @@
                 </ng-template>
             </mona-menu-item>
             <mona-menu-item [divider]="true"></mona-menu-item>
-            <mona-menu-item text="Edit" [disabled]="true">
+            <mona-menu-item text="Edit" [disabled]="false">
                 <mona-menu-item text="Undo" (menuClick)="print('Undo clicked.')"></mona-menu-item>
                 <mona-menu-item text="Redo"></mona-menu-item>
             </mona-menu-item>
