--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.html
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-content/context-menu-content.component.html
@@ -1,6 +1,7 @@
 <ul class="mona-contextmenu-list" tabindex="0">
-    <ng-container *ngFor="let menuItem of contextMenuData.menuItems">
-        <li class="mona-contextmenu-list-item" [ngClass]="{'disabled': menuItem.disabled, 'divider': menuItem.divider}"
+    <ng-container *ngFor="let menuItem of contextMenuData.menuItems; let mx = index;">
+        <li class="mona-contextmenu-list-item"
+            [ngClass]="{'disabled': menuItem.disabled, 'divider': menuItem.divider, 'focused': keyManager?.activeItem?.menuItem === menuItem}"
             (mouseenter)="onListItemMouseEnter($event, menuItem)"
             (click)="onListItemClick($event, menuItem)" *ngIf="menuItem.visible">
             <mona-contextmenu-item [menuItem]="menuItem" [iconSpaceVisible]="iconSpaceVisible" [linkSpaceVisible]="linkSpaceVisible"
