Start implementing chip component

--- a/projects/mona-ui/styles/mona-dark.scss
+++ b/projects/mona-ui/styles/mona-dark.scss
@@ -4,6 +4,7 @@
     --mona-background: #1C1D1F;
     --mona-background-dark: #161719;
     --mona-background-darker: #0B0C0E;
+    --mona-background-darker-2: #000000;
     --mona-background-light: #2D2E30;
     --mona-background-lighter: #3E3F41;
     --mona-border-color: #101114;
