--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -74,6 +74,21 @@
         </mona-contextmenu>
     </div>
 
+    <div style="display: flex;">
+        <mona-chip label="Chip I" [removable]="true" style="margin-right: 5px;"></mona-chip>
+        <mona-chip>
+            <span style="color: deeppink; font-weight: 600;">Chip Content</span>
+        </mona-chip>
+        <mona-chip style="margin-left: 5px;" [removable]="true">
+            <div style="width: 100%; height: 100%; display: flex; align-items: center;">
+                <div style="background: var(--mona-background-dark); border-right: 1px solid var(--mona-border-color); height: 100%; width: 23px; display: flex; align-items: center; justify-content: center; margin-left: -10px;">
+                    <span class="fa fa-user-alt" style="margin-left: 2px;"></span>
+                </div>
+                <span style="margin-left: 4px;">Username</span>
+            </div>
+        </mona-chip>
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
